public/index.css
body {
	background-color: rgb(4, 6, 19);
}
.arial, td, th {
  font-family: Arial !important;
}  
.sortable {
  width: 100%;
}
.name {
  width: 75%;
}
.players {
  width: 5%;
}
.map {
  width: 10%;
}
table, th, td {
  border-collapse: collapse;
}
td, th{
 color: #eae9e4;
 font-size: 1.3rem;
}
table, th, td {
  border-collapse: collapse;
}
td {
  border-right: 1px solid rgb(48, 52, 54);
}
td:nth-child(2n), th:nth-child(2n) { /* Rows inside of the Players Column */ 
  text-align: center;
}
td:nth-child(3n), th:nth-child(3n) { /* Rows inside of the Map Column */ 
  text-align: center;
}
.sortable {
  width: 100%;
}
.tableContainer {
  width:100%;
  height: 60vh;
  border: 1px solid white;
  border-bottom-color: rgb(67, 167, 218);
  border-left-color: rgb(67, 167, 218);
  border-right-color: rgb(67, 167, 218);
  border-top-color: rgb(67, 167, 218);
}
/* Scrollbar Stuff */
.tableContainer {
  overflow-y: auto;
  overflow-x: hidden; /* Prevent horizontal scrollbar on chrome*/
  /* Firefox & Edge Scrollbar*/
  scrollbar-color: rgb(54, 52, 52) rgb(0, 0, 0);
  scrollbar-width: thin;
}
/* chrome & others Scrollbar*/
::-webkit-scrollbar {
  width: 1vh;
}
::-webkit-scrollbar-track {
  background: rgb(0, 0, 0);
}
::-webkit-scrollbar-thumb {
  background: rgb(54, 52, 52)
}
/* Scrollbar Stuff */

.topThing {
  text-align: left;
  font-size: 1.6rem;
  background-color: rgba(16, 18, 19, 0.8);
  border-bottom: 1px solid rgb(67, 167, 218);
  cursor: pointer;
}
.serverList{
  /* background-color: rgba(16, 18, 19, 0.6); */
}
.serverCell {
  border-bottom: 1px solid rgb(61, 61, 61);
  height: 3.3vh;
  cursor: pointer;
}
.serverCell:hover, .topThing:hover {
  background-color: rgba(0, 130, 255, 0.5);
  background-color: rgba(7, 48, 89, 0.5);
}
.serverCell.selected { /* Selected ServerCells */
  background-color: rgba(0, 130, 255, 0.5);
}
.serverCell.selected > td {
  /*color: black;*/
}
.serverCell.selected:hover {
  /*background-color: rgb(90, 131, 172)*/
}
.map {
    text-align: center;
}
.sourceCodeText {
  position:absolute;
  bottom:0;
  color: white;
  font-size: 0.9rem;
}
.sourceCodeHref:visited, .sourceCodeHref{
  color: white;
}
.errorText {
  display: none;
  color: red;
}
.detailsInfoText {
  color: white;
  font-size: 120%;
  margin-left: 1vh;
  text-align: center;
}
.detailsTextContainer > * { /* All childrens inside of the details text container */ 
  color: #eae9e4;
  font-size: 120%;
  margin-left: 1vh;
}
.detailsTextContainer {
  height: 100%;
  overflow-y: auto;
}
.detailsDiv {
  margin-top: 1vh;
  visibility: hidden;
  height: 34vh;
  width: 100%;
  background-color: rgba(16, 18, 19, 0.767);
  border: rgb(255, 0, 0) 1px solid;
}
.detailDescription {
  display: inline-block;
  width: 70%;
  /* background-color: aliceblue; */
}
hr {
  margin-top: -1vh;
  margin-bottom: -1vh;
  border-color: rgb(51, 51, 51);
  width: 70%;
}

@media screen and (max-width: 800px) { /* Runs the folowing CSS if the user is a mobile/smaller device*/
  .sourceCodeText{
    display: none;
  }
  td:nth-child(3n), th:nth-child(3n){ /* Prevent the Map column from appearing. */
    display: none;
  }
  .detailsDiv { /* Prevent the mobile browser search bar from showing up and dissapearing when scrolling. */
    height: 30vh;
  }
  .serverCell { /* More consistent sizing of the server rows. */
    height: 6vh;
    overflow: hidden;
  }
}

